--- a/assets/sass/_header.scss
+++ b/assets/sass/_header.scss
@@ -6,18 +6,20 @@
     width: 1100px;
   }
 
+ .navbar-toggler-icon{
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e")
+  }
+
+  .navbar-toggler{
+    padding: 2px 4px;
+    border: 1px solid #fff;
+  }
+
 }
 .container-fluid{
   margin-bottom: 0;
   padding-bottom: 0;
 }
-
-// .fig_1{
-//   margin-left: 100px;
-// }
-// .fig_2{
-//   margin-left: 60px;
-// }
 
 .aparecer{
   display: none;
