alterado menu dropdwn

--- a/assets/sass/_header.scss
+++ b/assets/sass/_header.scss
@@ -3,9 +3,10 @@
   padding: 20px;
 
   &_menu {
-    width: 1100px;
-  }
+    width: 1200px;
 
+  }
+// MENU HAMBURGURE
   .navbar-toggler-icon {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
   }
@@ -14,31 +15,32 @@
     padding: 2px 4px;
     border: 1px solid #fff;
   }
-
+//MENU HAMBURGUER FECHAR
 
   .btn-close {
     background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath d='M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414z'/%3e%3c/svg%3e") center/ 1em auto no-repeat;
     opacity: 1;
   }
-
 }
 
-.container-fluid {
-  margin-bottom: 0;
-  padding-bottom: 0;
-}
-
-// .aparecer{
-//    display: none;
-// }
-
+//MENU
 .header_menu_link a {
+  border-bottom: 1px solid $cor1;
   color: #fff;
 }
 
 .header_menu_link a:hover:not(.link-ofertas) {
+  border-bottom: 1px solid $cor2;
   color: $cor2;
 }
+.header_menu_link a:active{
+  border-bottom: 1px solid $cor2;
+}
+
+.dropdown-menu{
+  background-color: $cor1;
+}
+
 
 .offcanvas-header{
 border-bottom: 1px solid #fff;
@@ -52,6 +54,10 @@ nav .offcanvas {
 .navbar-nav {
   align-items: center;
   gap: 20px;
+}
+
+.dropdown-menu {
+  border-color: #fff;
 }
 
 @media(max-width: 1050px) {
@@ -76,7 +82,7 @@ nav .offcanvas {
 
 .link-ofertas {
   background: linear-gradient(120deg, $cor3, $cor2);
-  padding: 10px 20px;
+  padding: 10px 25px;
   border-radius: 5px;
   justify-content: start;
 }
