--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ body {
   background-color: #002a3a;
   padding: 20px; }
   .header_menu {
-    width: 1100px; }
+    width: 1200px; }
   .header .navbar-toggler-icon {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e"); }
   .header .navbar-toggler {
@@ -30,15 +30,19 @@ body {
     background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath d='M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414z'/%3e%3c/svg%3e") center/1em auto no-repeat;
     opacity: 1; }
 
-.container-fluid {
-  margin-bottom: 0;
-  padding-bottom: 0; }
-
 .header_menu_link a {
+  border-bottom: 1px solid #002a3a;
   color: #fff; }
 
 .header_menu_link a:hover:not(.link-ofertas) {
+  border-bottom: 1px solid #ffa400;
   color: #ffa400; }
+
+.header_menu_link a:active {
+  border-bottom: 1px solid #ffa400; }
+
+.dropdown-menu {
+  background-color: #002a3a; }
 
 .offcanvas-header {
   border-bottom: 1px solid #fff;
@@ -50,6 +54,9 @@ nav .offcanvas {
 .navbar-nav {
   align-items: center;
   gap: 20px; }
+
+.dropdown-menu {
+  border-color: #fff; }
 
 @media (max-width: 1050px) {
   .fig_1 {
@@ -67,7 +74,7 @@ nav .offcanvas {
 
 .link-ofertas {
   background: linear-gradient(120deg, #ee2737, #ffa400);
-  padding: 10px 20px;
+  padding: 10px 25px;
   border-radius: 5px;
   justify-content: start; }
 
