--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,11 +16,20 @@ body {
 [1200 - 1800] normal styles
 1800px +: big desktop
 */
+.fundobody {
+  position: absolute;
+  background-color: #F0EEEE;
+  background: linear-gradient(#FFF, #F0EEEE, #fff);
+  width: 100%;
+  height: 100vh;
+  z-index: -100; }
+
 .header {
+  position: relative;
   background-color: #002a3a;
   padding: 20px; }
   .header_menu {
-    width: 1200px; }
+    width: 1300px; }
   .header .navbar-toggler-icon {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e"); }
   .header .navbar-toggler {
