--- a/assets/sass/_header.scss
+++ b/assets/sass/_header.scss
@@ -1,10 +1,20 @@
+.fundobody{
+  position: absolute;
+  background-color: $cor10;
+  background: linear-gradient(#FFF, $cor10, #fff);
+  width: 100%;
+  height: 100vh;
+  // float: left;
+  z-index: -100;
+}
+
 .header {
+  position: relative;
   background-color: $cor1;
   padding: 20px;
 
   &_menu {
-    width: 1200px;
-
+    width: 1300px;
   }
 // MENU HAMBURGURE
   .navbar-toggler-icon {
