adicionando animacao com JS

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,6 +1,7 @@
 @import 'base';
 @import 'mixins';
 @import 'variaveis';
+@import 'animacoes';
 @import 'header';
 @import 'galery';
 @import 'video';
