--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,10 +16,17 @@ body {
 [1200 - 1800] normal styles
 1800px +: big desktop
 */
+.js-scroll {
+  opacity: 0;
+  transform: translate3d(-30px, 0, 0);
+  transition: .4s; }
+
+.js-scroll.ativo {
+  opacity: 1;
+  transform: translate3d(0, 0, 0); }
+
 .fundobody {
   position: absolute;
-  background-color: #F0EEEE;
-  background: linear-gradient(#FFF, #F0EEEE, #fff);
   width: 100%;
   height: 100vh;
   z-index: -100; }
