--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -388,15 +388,15 @@ img.fig_1 {
       font-size: 15px;
       margin-top: 5px;
       margin-bottom: 3em; }
-  .agenda .btn-ibcidade:hover {
+  .agenda .btn-ibcidade {
+    font-size: 16px;
     text-decoration: none;
     color: #000;
     font-family: "Roboto";
-    font-weight: 500;
-    background: linear-gradient(#F0EEEE, #F0EEEE) padding-box, linear-gradient(45deg, #87189D, #171C8F) border-box;
+    background: linear-gradient(#fff, #fff) padding-box, linear-gradient(45deg, #0077C8, #26D07C) border-box;
     border: 2.5px solid transparent;
     border-radius: 10px;
-    padding: 3px 8px;
+    padding: 5px 15px;
     display: flex;
     align-items: center;
     gap: 5px; }
