--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -338,7 +338,7 @@ img.fig_1 {
             color: #000; }
 
 .agenda {
-  padding: 65px 65px 0 65px; }
+  padding: 65px; }
   @media (max-width: 500px) {
     .agenda {
       padding: 40px 40px 0 40px; } }
@@ -429,12 +429,15 @@ img.fig_1 {
   color: #002a3a; }
 
 .areas {
+  background-color: #F0EEEE;
+  max-width: 100%;
   padding: 60px; }
   .areas .areas_container {
+    max-width: 1100px;
     flex-wrap: wrap;
     margin: auto;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     justify-items: center;
     align-items: center;
     gap: 20px; }
@@ -446,14 +449,14 @@ img.fig_1 {
       .areas .areas_container {
         grid-template-columns: 1fr 1fr; } }
     .areas .areas_container img {
-      width: 130px;
+      width: 150px;
       padding: 10px; }
       .areas .areas_container img:hover {
         transition: all .6s;
         transform: scale(1.5); }
   .areas h2 {
-    margin-bottom: 30px;
-    margin-left: 200px;
+    text-align: center;
+    margin-bottom: 60px;
     font-family: "Sora";
     font-size: 35px;
     font-weight: 700;
