--- a/assets/sass/_footer.scss
+++ b/assets/sass/_footer.scss
@@ -6,7 +6,7 @@
     font-size: 20px;
     font-family: "Roboto";
     color: #fff;
-    width: 55em;
+    width: 900px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     margin: auto;
