--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -338,7 +338,7 @@ img.fig_1 {
             color: #000; }
 
 .agenda {
-  padding: 65px; }
+  padding: 60px 0 0 0; }
   @media (max-width: 500px) {
     .agenda {
       padding: 40px 40px 0 40px; } }
@@ -431,6 +431,7 @@ img.fig_1 {
 .areas {
   background-color: #F0EEEE;
   max-width: 100%;
+  padding-top: 0;
   padding: 60px; }
   .areas .areas_container {
     max-width: 1100px;
@@ -449,7 +450,7 @@ img.fig_1 {
       .areas .areas_container {
         grid-template-columns: 1fr 1fr; } }
     .areas .areas_container img {
-      width: 150px;
+      width: 180px;
       padding: 10px; }
       .areas .areas_container img:hover {
         transition: all .6s;
@@ -485,12 +486,11 @@ img.fig_1 {
 
 .dizimos {
   padding: 60px;
-  background-color: #F0EEEE;
   padding-bottom: 100px; }
   .dizimos h2 {
+    text-align: center;
     grid-column: 1/4;
-    margin-bottom: 30px;
-    margin-left: 200px;
+    margin-bottom: 60px;
     font-family: "Sora";
     font-size: 35px;
     font-weight: 700;
@@ -502,19 +502,20 @@ img.fig_1 {
     -webkit-text-fill-color: transparent;
     -moz-text-fill-color: transparent; }
   .dizimos_container {
-    width: 55em;
+    width: 900px;
+    font-size: 20px;
     font-family: "Roboto";
     color: #002a3a;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    column-gap: 80px;
+    column-gap: 20px;
     margin: auto; }
     @media (max-width: 1200px) {
       .dizimos_container {
         margin: auto;
         width: 800px; } }
     .dizimos_container div {
-      border-right: 1px solid #ee2737; }
+      border-right: 2.5px solid #ee2737; }
   .dizimos .dizimos_flex {
     display: flex;
     flex-direction: column;
@@ -566,7 +567,7 @@ img.fig_1 {
     font-size: 20px;
     font-family: "Roboto";
     color: #fff;
-    width: 55em;
+    width: 900px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     margin: auto;
