--- a/assets/sass/_dizimos.scss
+++ b/assets/sass/_dizimos.scss
@@ -1,22 +1,22 @@
 .dizimos {
   padding: 60px;
-  background-color: $cor10;
   padding-bottom: 100px;
 
   h2 {
+    text-align: center;
     grid-column: 1/4;
-    margin-bottom: 30px;
-    margin-left: 200px;
+    margin-bottom: 60px;
     @include titulo($cor6, $cor2)
   }
 
   &_container {
-    width: 55em;
+    width: 900px;
+    font-size: 20px;
     font-family: "Roboto";
     color: $cor1;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    column-gap: 80px;
+    column-gap: 20px;
     margin: auto;
 
     @media (max-width: 1200px) {
@@ -25,7 +25,7 @@
     }
 
     div {
-      border-right: 1px solid $cor3;
+      border-right: 2.5px solid $cor3;
     }
   }
 
